// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`buffer data 1`] = `
Object {
  "body": Object {
    "data": Array [
      136,
      2,
    ],
    "type": "Buffer",
  },
  "headers": Object {
    "Content-Type": "application/octet-stream",
  },
  "host": "70xqba8pp4.execute-api.us-west-2.amazonaws.com",
  "method": "POST",
  "path": "/dev/%40connections/UgfywcrkvHcCJyg%3D",
}
`;

exports[`http 1`] = `
Object {
  "body": "\\"hi\\"",
  "headers": Object {
    "Content-Type": "application/json",
  },
  "host": "70xqba8pp4.execute-api.us-west-2.amazonaws.com",
  "method": "POST",
  "path": "/dev/%40connections/UgfywcrkvHcCJyg%3D",
}
`;

exports[`https 1`] = `
Object {
  "body": "\\"hi\\"",
  "headers": Object {
    "Content-Type": "application/json",
  },
  "host": "70xqba8pp4.execute-api.us-west-2.amazonaws.com",
  "method": "POST",
  "path": "/dev/%40connections/UgfywcrkvHcCJyg%3D",
}
`;
